fixed position of logo on safari

--- a/css/main.scss
+++ b/css/main.scss
@@ -24,6 +24,9 @@ body {
     width: 600px;
     height: 600px;
     fill: blue;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    top: 50%;
   }
 }
 .content {
@@ -99,6 +102,7 @@ body {
 }
 .flex {
   display: -webkit-box;
+  display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
@@ -108,11 +112,16 @@ body {
     flex-wrap: wrap;
   }
   &-center {
+    -webkit-box-align: center;
+    -moz-box-align: center;
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
+
+    -webkit-box-pack: center;
+     -moz-box-pack: center;
+     -ms-flex-pack: center;
+     -webkit-justify-content: center;
+     justify-content: center;
   }
 }
